# FaceGenBaseLibrary

source/: CMakeLists.txt
source/LibFgBase/: CMakeLists.txt
source/LibFgNix/: CMakeLists.txt
source/LibFgWin/: CMakeLists.txt
source/LibImageMagickCore/: CMakeLists.txt
source/LibImageMagickCore/ImageMagick-6.6.2/magick/: CMakeLists.txt
source/LibImageMagickCore/ImageMagick-6.6.2/tiff/libtiff/: tiffconf.h
source/LibImageMagickCore/LibFgBase/: Makefile  cmake_install.cmake
source/LibImageMagickCore/LibFgNix/: Makefile  cmake_install.cmake
source/LibImageMagickCore/LibImageMagickCore/: Makefile  cmake_install.cmake
source/LibImageMagickCore/LibJpegIjg6b/: Makefile  cmake_install.cmake
source/LibImageMagickCore/LibTntJama/: Makefile  cmake_install.cmake
source/LibImageMagickCore/LibTpBoost/: Makefile  cmake_install.cmake
source/LibImageMagickCore/LibUTF-8/: Makefile  cmake_install.cmake
source/LibJpegIjg6b/: CMakeLists.txt
source/LibTntJama/: CMakeLists.txt
source/LibTpBoost/: CMakeLists.txt
source/LibUTF-8/: CMakeLists.txt
